--- a/app/globals.css
+++ b/app/globals.css
@@ -17,11 +17,7 @@
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  color: #bdbfc1;
+  /* color: rgb(var(--foreground-rgb)); */
+  background: rgb(35, 41, 49);
 }
